Jobs 게시판: 목록, 글 작성 기능 개선 & 댓글 CRUD 수정

--- a/jam/src/main/webapp/WEB-INF/views/common/common.jspf
+++ b/jam/src/main/webapp/WEB-INF/views/common/common.jspf
@@ -36,4 +36,4 @@
 		
 		<script type="module" src="/resources/include/dist/js/chat.js"></script>
 		<script type="text/javascript" src="/resources/include/dist/js/chatui.js"></script>
-		
+		<script src="/resources/include/dist/js/userToggle.js"></script>
