--- a/jam/src/main/webapp/WEB-INF/views/common/common.jspf
+++ b/jam/src/main/webapp/WEB-INF/views/common/common.jspf
@@ -10,7 +10,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>JAM</title>
 		
 		<link rel="shortcut icon" href="/resources/include/images/JAM_icon2.svg" />
