--- a/jam/src/main/webapp/WEB-INF/views/common/common.jspf
+++ b/jam/src/main/webapp/WEB-INF/views/common/common.jspf
@@ -20,10 +20,11 @@
 		<script type="text/javascript" src="/resources/include/dist/js/jquery-3.7.1.min.js"></script>
 		
 		<!-- 부트스트랩 -->
-		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
-		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+		<link rel="/resources/include/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/resources/include/dist/css/css/all.min.css">
+		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 		
-		<script src="https://kit.fontawesome.com/572dfce069.js" crossorigin="anonymous"></script>
+		<script src="https://kit.fontawesome.com/572dfce069.js" crossorigin="anonymous"></script> -->
 		
 		<!-- jsDelivr 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -33,6 +34,14 @@
 		<link rel="stylesheet" href="/resources/include/dist/css/layout.css" />
 		<script type="text/javascript" src="/resources/include/dist/js/common.js"></script>
 		
-		<script type="module" src="/resources/include/dist/js/chat.js"></script>
-		<script type="text/javascript" src="/resources/include/dist/js/chatui.js"></script>
 		<script src="/resources/include/dist/js/userToggle.js"></script>
+		
+		<script>
+			window.MY_ID = <%= session.getAttribute("userId") != null 
+				? "'" + session.getAttribute("userId") + "'" 
+				: "null" %>;
+		
+			window.MY_NAME = <%= session.getAttribute("userName") != null 
+				? "'" + session.getAttribute("userName") + "'" 
+				: "null" %>;
+		</script>
