--- a/jam/src/main/webapp/WEB-INF/views/common/common.jspf
+++ b/jam/src/main/webapp/WEB-INF/views/common/common.jspf
@@ -1,47 +1,51 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <%@ page trimDirectiveWhitespaces="true" %>
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+<%@ taglib uri="http://tiles.apache.org/tags-tiles" prefix="tiles" %>
 <%@ taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/functions" %>
 <%@ taglib uri="http://www.springframework.org/security/tags"
 	prefix="sec"%>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>JAM</title>
-		
-		<link rel="shortcut icon" href="/resources/include/images/JAM_icon2.svg" />
-		<link rel="apple-touch-icon" href="/resources/include/images/JAM_icon2.svg" />
-		
-		<!-- 제이쿼리 -->
-		<script type="text/javascript" src="/resources/include/dist/js/jquery-3.7.1.min.js"></script>
-		
-		<!-- 부트스트랩 -->
-		<link rel="/resources/include/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/resources/include/dist/css/css/all.min.css">
-		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-		
-		<script src="https://kit.fontawesome.com/572dfce069.js" crossorigin="anonymous"></script> -->
-		
-		<!-- jsDelivr 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-		
-		-->
-		<link rel="stylesheet" href="/resources/include/dist/css/layout.css" />
-		<script type="text/javascript" src="/resources/include/dist/js/common.js"></script>
-		
-		<script src="/resources/include/dist/js/userToggle.js"></script>
-		
-		<script>
-			window.MY_ID = <%= session.getAttribute("userId") != null 
-				? "'" + session.getAttribute("userId") + "'" 
-				: "null" %>;
-		
-			window.MY_NAME = <%= session.getAttribute("userName") != null 
-				? "'" + session.getAttribute("userName") + "'" 
-				: "null" %>;
-		</script>
+	 <%-- Tiles 값 꺼내기 --%>
+    <tiles:importAttribute  name="title"   ignore="true" />
+    <tiles:importAttribute  name="favicon" ignore="true" />
+
+    <title>${empty title ? 'JAM' : title}</title>
+
+    <%-- favicon: 컨텍스트 경로 안전하게 c:url 사용 --%>
+    <link rel="icon"
+          href="<c:url value='${empty favicon ? "/resources/include/images/main-favicon.svg" : favicon}'/>" />
+    <link rel="apple-touch-icon"
+          href="<c:url value='${empty favicon ? "/resources/include/images/main-favicon.svg" : favicon}'/>" />
+
+<%-- 
+	<link rel="shortcut icon" href="/resources/include/images/JAM_icon2.svg" />
+	<link rel="apple-touch-icon" href="/resources/include/images/JAM_icon2.svg" />
+	--%>
+	<!-- 제이쿼리 -->
+	<script type="text/javascript" src="/resources/include/dist/js/jquery-3.7.1.min.js"></script>
+	
+	<!-- 부트스트랩 -->
+	<link rel="/resources/include/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/resources/include/dist/css/css/all.min.css">
+	
+	<link rel="stylesheet" href="/resources/include/dist/css/layout.css" />
+	<script type="text/javascript" src="/resources/include/dist/js/common.js"></script>
+	
+	<script src="/resources/include/dist/js/userToggle.js"></script>
+	
+	<script>
+		window.MY_ID = <%= session.getAttribute("userId") != null 
+			? "'" + session.getAttribute("userId") + "'" 
+			: "null" %>;
+	
+		window.MY_NAME = <%= session.getAttribute("userName") != null 
+			? "'" + session.getAttribute("userName") + "'" 
+			: "null" %>;
+	</script>
+</head>
