feat: 다중 권한(Role) 구조 적용 및 JWT 기반 인증 동기화 - role, member_role 테이블 추가로 다중 권한 지원 - JWT 토큰 발급/검증 로직에서 다중 권한 처리 - SecurityContextHolder로 인증 정보 주입 및 JSP 태그로 접근 가능하도록 변경

--- a/jam/src/main/webapp/WEB-INF/views/common/common.jspf
+++ b/jam/src/main/webapp/WEB-INF/views/common/common.jspf
@@ -39,13 +39,11 @@
 	
 	<script src="/resources/include/dist/js/userToggle.js"></script>
 	
-	<script>
-		window.MY_ID = <%= session.getAttribute("userId") != null 
-			? "'" + session.getAttribute("userId") + "'" 
-			: "null" %>;
-	
-		window.MY_NAME = <%= session.getAttribute("userName") != null 
-			? "'" + session.getAttribute("userName") + "'" 
-			: "null" %>;
-	</script>
+	<sec:authorize access="isAuthenticated()">
+		<script>
+			window.MY_ID = '<sec:authentication property="name" />';
+			window.MY_AUTH = '<sec:authentication property="principal.authorities" />';
+			window.MY_NAME = '<sec:authentication property="principal.user_name" />';
+		</script>
+	</sec:authorize>
 </head>
