refactor: 세션 수동 저장 제거 - 인증 정보 세션 수동 저장 로직 제거 - SecurityContextHolder + JWT 병행 구조로 개선 - 닉네임 변경 시 SecurityContextHolder 갱신 및 JWT 재발급 로직 반영 - WIP: JWT 쿠키 만료 기간 변경 (자동 로그인 시 30일, 일반 로그인 시 1일)

--- a/jam/src/main/webapp/WEB-INF/views/common/common.jspf
+++ b/jam/src/main/webapp/WEB-INF/views/common/common.jspf
@@ -44,6 +44,10 @@
 			window.MY_ID = '<sec:authentication property="name" />';
 			window.MY_AUTH = '<sec:authentication property="principal.authorities" />';
 			window.MY_NAME = '<sec:authentication property="principal.user_name" />';
+			
+			console.log(window.MY_ID);
+			console.log(window.MY_NAME);
+			console.log(window.MY_AUTH);
 		</script>
 	</sec:authorize>
 </head>
