fix: 중고악기 게시판 경로 오타 수정

--- a/src/main/resources/templates/template/client/header.html
+++ b/src/main/resources/templates/template/client/header.html
@@ -420,7 +420,7 @@
 	<div id="mobileMenu" class="mobile-nav" >
 		<a th:href="@{/community/board}">커뮤니티</a>
 		<a th:href="@{/roomRental/boards}">연습실</a>
-		<a th:href="@{/fleaMarket/boards}">중고악기</a>
+		<a th:href="@{/fleaMarket/board}">중고악기</a>
 		<a th:href="@{/jobs/board}">Jobs</a>
 	</div>
 </header>
