--- a/src/main/resources/templates/template/client/footer.html
+++ b/src/main/resources/templates/template/client/footer.html
@@ -13,14 +13,14 @@
 			.footer {
 				padding: 10px 20px;
 			}
-			p {
+			.footer-p {
 			    font-size: 12px;
 			}
 		}
 	</style>
 	
 	<div class="footer text-center">
-		<p>
+		<p class="footer-p">
 			JAM <br>
 			㈜ 잼 서울지사 주소 : 서울특별시 강남구 테헤란로 14길 6 남도빌딩 10층 <br/>
 			대표이사 : 홍길동 | 사업자등록번호 : 123-87-29178 |
